# in-network

./: .gitignore  MELHORIAS.md  README.md  pyproject.toml
bmv2/: docker-compose.yml  setup.sh
bmv2/Dockerfiles/host/: Dockerfile
bmv2/Dockerfiles/switch/: Dockerfile
data/: .gitkeep  metadata.json
p4/: ml_classifier.p4
src/: __init__.py  config.py  demo.py  prepare_data.py  train_model.py
